syntax = "proto3";

package auth;

service AuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse);

  rpc Login (LoginRequest) returns (LoginResponse);

  rpc VerifyToken (VerifyTokenRequest) returns (VerifyTokenResponse);
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignUpResponse {
  string userId = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message VerifyTokenRequest {
  string token = 1;
}

message VerifyTokenResponse {
  string userId = 1;
  string email = 2;
}
